css/chata-styles.css
/* ... */
.autoql-vanilla-chata-btn.danger:hover {
    background-color: var(--autoql-vanilla-danger-color,#ca0b00);
    color: #fff;
}

.autoql-vanilla-chata-btn.danger {
    color: var(--autoql-vanilla-danger-color,#ca0b00);
    border: 1px solid #ca0b00;
    border: 1px solid var(--autoql-vanilla-danger-color,#ca0b00);
    background: inherit;
}

.autoql-vanilla-chata-btn.primary {
    background: var(--autoql-vanilla-accent-color);
    border: 1px solid var(--autoql-vanilla-accent-color);
    color: #fff;
}

.autoql-vanilla-chata-btn.default:hover{
    border-color: var(--autoql-vanilla-accent-color);
    color: var(--autoql-vanilla-accent-color);
}

.autoql-vanilla-chata-btn.primary:hover{
     opacity: 0.8;
}

.autoql-vanilla-chata-toolbar-btn.btn-green {
    color: #2ecc40;
}

.autoql-vanilla-chata-btn.disabled {
    opacity: 0.4;
    cursor: not-allowed;
    pointer-events: none;
}

.autoql-vanilla-comparison-value-positive {
    color: #2ecc40 !important;
}

.autoql-vanilla-comparison-value-negative {
    color: #e80000 !important;
}

.autoql-vanilla-chata-tiny-popover-container {
    z-index: 9999;
    border: 1px solid hsla(0,0%,67.1%,.32);
    border-radius: 4px;
    box-shadow: 0 0 8px rgba(0,0,0,.15);
    -webkit-transition: all .2s ease 0s!important;
    transition: all .2s ease 0s!important;
    position: absolute;
    overflow: hidden;
}

.autoql-vanilla-chata-tiny-popover-container .chata-context-menu {
    background: var(--autoql-vanilla-background-color-secondary);
    width: 150px;
    padding: 10px 0;
}

.autoql-vanilla-chata-tiny-popover-container .chata-context-menu .chata-context-menu-list {
    list-style-type: none;
    width: 100%;
    margin: 0;
    padding: 0;
}

.autoql-vanilla-chata-tiny-popover-container .chata-context-menu .chata-context-menu-list .chata-context-menu-list li {
    color: var(--chata-response-text-color-primary);
    width: 100%;
    height: 35px;
    line-height: 35px;
    padding: 0 20px;
    cursor: pointer;
}

.autoql-vanilla-chata-tiny-popover-container .chata-context-menu .chata-context-menu-list li:hover {
    background: rgba(0,0,0,.05);
}

.autoql-vanilla-report-problem-text-area {
    height: 58px;
    border-radius: 4px;
    margin-top: 10px;
    padding: 5px 10px;
    outline: none!important;
    overflow: auto;
    resize: vertical;

    border-color: var(--autoql-vanilla-border-color);
    color: var(--autoql-vanilla-text-color-primary);
    background: var(--autoql-vanilla-background-color-secondary,#fff);
}

.autoql-vanilla-no-columns-error-message {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    text-align: center;
    padding: 20px;
    font-size: 13px;
}

.autoql-vanilla-no-columns-error-message .warning-icon {
    font-size: 22px;
    display: block;
    margin-bottom: -13px;
}

.autoql-vanilla-no-columns-error-message .warning-icon svg line{
    stroke-width: unset !important;
    opacity: 1;
}

.autoql-vanilla-no-columns-error-message .warning-icon svg * {
    fill: unset;
}

.autoql-vanilla-no-columns-error-message .eye-icon svg * {
    fill: unset;
}

.autoql-vanilla-no-columns-error-message .eye-icon {
    vertical-align: bottom;
    line-height: 18px;
}

.autoql-vanilla-chata-axis-selector-arrow{
    opacity: 1 !important;
}
.autoql-vanilla-x-axis-label-border, .autoql-vanilla-y-axis-label-border {
    stroke: transparent;
    opacity: .5;
    transition: stroke .3s ease;
    z-index: 3;
    cursor: pointer;
}

.autoql-vanilla-y-axis-label-border:hover, .autoql-vanilla-x-axis-label-border:hover{
    stroke: #508bb8;

}

.autoql-vanilla-chart-selector{
    cursor: pointer;
}
.autoql-vanilla-chart-selector:hover .autoql-vanilla-x-axis-label-border,
.autoql-vanilla-chart-selector:hover .autoql-vanilla-y-axis-label-border {
    stroke: #508bb8;
}


.autoql-vanilla-axis-selector-container .number-selector-header {
    margin-top: 10px;
    font-size: 12px;
    padding: 0 18px 7px;
    font-weight: 600;
}

.autoql-vanilla-chata-list-item:not(:last-child) {
    border-bottom: 1px solid hsla(0,0%,82.7%,.29);
}

.autoql-vanilla-chata-list-item {
    padding: 0 20px;
    display: flex;
    justify-content: space-between;
    line-height: 36px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.autoql-vanilla-chata-list-item {
    padding-left: 25px;
    padding-right: 15px;
    font-size: 12px;
    line-height: 28px;
}
.autoql-vanilla-chata-list-item:hover {
    background: rgba(0,0,0,.03);
}

.autoql-vanilla-m-checkbox__input {
    border-color: var(--autoql-vanilla-accent-color);
    box-sizing: border-box !important;
    padding: 0 !important;
    opacity: 1 !important;
}

.autoql-vanilla-chata-list-item .autoql-vanilla-m-checkbox__input{
    width: 18px !important;
    height: 18px !important;
}

.autoql-vanilla-chata-list-item .autoql-vanilla-m-checkbox__input .autoql-vanilla-chata-checkbox-tick{
    top: 3px;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
    top: 100px;
  }
  75% {
    opacity: 0.5;
    top: 0px;
  }
  100% {
    opacity: 1;
  }
}

@keyframes spinner-loader {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes bounceIn {
    0% {
        opacity: .25;
    }
    50% {
        opacity: 50;
    }
    70% {
        opacity: .75;
    }
    100% {
        opacity: 1;
    }
}

@keyframes bounceIn {
    0% {
        opacity: .25;
    }
    50% {
        opacity: 50;
    }
    70% {
        opacity: .75;
    }
    100% {
        opacity: 1;
    }
}

@keyframes scale-up-br {
    0% {
        transform: scale(0.5);
        transform-origin: 100% 100%;
    }
    100% {
        transform: scale(1);
        transform-origin: 100% 100%;
    }
}

@keyframes scale-up-bl {
    0% {
        transform: scale(0.5);
        transform-origin: 0% 100%;
    }
    100% {
        transform: scale(1);
        transform-origin: 0% 100%;
    }
}
/* ... */

